README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,3 +1,14 @@
 Remake of popular Battle City game written in C programming language using ncurses library.
 
-If using on linux, please set linker options to link ncurses library
+Editor functions:
+
+q, Q - change type of the field
+w, W - change size of the field
+e, E - plant the field
+g, G - random
+F2 - save
+
+Game options:
+
+Move keys up, down, left, right
+Fire space
